examples/test/testpolicy18684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18684
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key10: value23
      key25: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value44
      podSelector:
        matchLabels:
          key49: value32
          key10: value7
          key42: value49
